--- a/requirements.txt
+++ b/requirements.txt
@@ -1,121 +1,18 @@
-BeautifulSoup==3.2.1
-Django==1.6.1
-Jinja2==2.7.2
-Lasagne==0.1dev
-MarkupSafe==0.18
-PAM==0.4.2
-PIL==1.1.7
-Pillow==2.3.0
-PyBluez==0.18
-PyYAML==3.11
-Pygments==1.6
-Sphinx==1.2.2
-Theano==0.7.0
-Twisted-Core==13.2.0
-Twisted-Web==13.2.0
-adium-theme-ubuntu==0.3.4
-apt-xapian-index==0.45
-argparse==1.2.1
-astroid==1.0.1
-azure==0.11.0
-boto==2.28.0
-chardet==2.0.1
-classicmenu-indicator==0.07
-colorama==0.2.5
-command-not-found==0.3
-cssselect==0.9.1
-debtagshw==0.1
-decorator==3.4.0
-defer==1.0.6
-dirspec==13.10
-dnspython==1.11.1
-docopt==0.6.2
-docutils==0.11
-duplicity==0.6.23
-facerec==1.0
-feedparser==5.1.3
-futures==3.0.3
-gdata==2.0.18
-gdbn==0.1
-gnumpy==0.2
-gyp==0.1
-html5lib==0.999
-httplib2==0.8
-indicator-sound-switcher==1.2.2ubuntu0-gtk3ppa0
-iniparse==0.4
-ipython==1.2.1
-joblib==0.8.4
-kiki==0.5.6
-lockfile==0.8
-logilab-common==0.61.0
-lxml==3.3.3
-matplotlib==1.3.1
-mercurial==2.8.2
-mysql-connector-python==1.1.6
-mysql-utilities==1.3.5
-nltk==2.0.4
-nolearn==0.5
-nose==1.3.1
-numpy==1.8.2
-oauth2==1.5.211
-oauthlib==0.6.1
-oneconf==0.3.7
-pandas==0.15.2
-paramiko==1.10.1
-pep8==1.4.6
-pexpect==3.1
-piston-mini-client==0.7.5
-psutil==1.2.1
-pyOpenSSL==0.13
-pychecker==0.8.19
-pycrypto==2.6.1
-pycups==1.9.66
-pycurl==7.19.3
-pyflakes==0.8.1
-pygobject==3.12.0
--e git://github.com/lisa-lab/pylearn2.git@d43d015d11747bdbd49737ce1163b9af67eac840#egg=pylearn2-master
-pylint==1.1.0
-pynnet==0.3.0dev
-pyparsing==2.0.1
-pyquery==1.2.9
-pyserial==2.6
-pysmbc==1.0.14.1
-pysqlite==2.6.3
-python-apt==0.9.3.5ubuntu1
-python-dateutil==1.5
-python-debian==0.1.21-nmu2ubuntu2
-python-twitter==1.1
-pytz==2012c
-pyxdg==0.25
-pyzmq==14.0.1
-reportlab==3.0
-requests==2.2.1
-requests-oauthlib==0.4.0
-roman==2.0.0
-rope==0.9.2
-scikit-learn==0.15.1
-scipy==0.15.1
-screenlets==0.1.6
-screenlets-pack-all==0.1.6
-sessioninstaller==0.0.0
-simplegeneric==0.8.1
-six==1.5.2
-software-center-aptd-plugins==0.0.0
-spyder==2.2.5
-system-service==0.1.6
-threadpool==1.2.7
-tortoisehg==2.10
-uTidylib==0.2
-unity-lens-photos==1.0
-urllib3==1.7.1
-vboxapi==1.0
-virtualenv==1.11.4
-wheel==0.24.0
-winpdb==1.4.8
-wsgiref==0.1.2
-wxGlade==0.6.8
-wxPython==2.8.12.1
-wxPython-common==2.8.12.1
-xdiagnose==3.6.3build2
-zc.buildout==2.2.1
-zope.interface==4.0.5
++Flask==0.10.1
++Jinja2==2.7.3
++MarkupSafe==0.23
++SQLAlchemy==0.9.8
++Werkzeug==0.9.6
++argparse==1.2.1
++azure==0.9.0
++cssselect==0.9.1
++gunicorn==19.1.1
++itsdangerous==0.24
++lxml==3.4.1
++six==1.8.0
++numpy==1.9.0
++pyquery==1.2.9
++python-dateutil==2.3
++scipy==0.13.3
++scikit-learn==0.15.2
++wsgiref==0.1.2
