--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-+Flask==0.10.1
-+Jinja2==2.7.3
-+MarkupSafe==0.23
-+SQLAlchemy==0.9.8
-+Werkzeug==0.9.6
-+argparse==1.2.1
-+azure==0.9.0
-+cssselect==0.9.1
-+gunicorn==19.1.1
-+itsdangerous==0.24
-+lxml==3.4.1
-+six==1.8.0
-+numpy==1.9.0
-+pyquery==1.2.9
-+python-dateutil==2.3
-+scipy==0.13.3
-+scikit-learn==0.15.2
-+wsgiref==0.1.2
+Flask==0.10.1
+Jinja2==2.7.3
+MarkupSafe==0.23
+SQLAlchemy==0.9.8
+Werkzeug==0.9.6
+argparse==1.2.1
+azure==0.9.0
+cssselect==0.9.1
+gunicorn==19.1.1
+itsdangerous==0.24
+lxml==3.4.1
+six==1.8.0
+numpy==1.9.0
+pyquery==1.2.9
+python-dateutil==2.3
+scipy==0.13.3
+scikit-learn==0.15.2
+wsgiref==0.1.2
