--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ gunicorn==19.1.1
 itsdangerous==0.24
 lxml==3.4.1
 numpy==1.9.0
+pymongo==3.1
 pyodbc==3.0.10
 pyquery==1.2.9
 python-dateutil==2.3
