--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,13 @@ Werkzeug==0.9.6
 argparse==1.2.1
 azure==0.9.0
 cssselect==0.9.1
+enum34==1.1.2
 gunicorn==19.1.1
 itsdangerous==0.24
 lxml==3.4.1
 numpy==1.9.0
+pathlib==1.0.1
+pyScss==1.3.4
 pymongo==3.1
 pyquery==1.2.9
 python-dateutil==2.3
